wiki/content/specifications/vec/V120/classes/aliasidentificationtype.md
---
title: AliasIdentificationType
toc: false
type: specs
date: "2019-05-05T00:00:00+01:00"
draft: false
menu_name: vec120

# Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
weight: 
---

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | core |
| **Applied Stereotype**  | [OpenEnumeration]({{< relref "openenumeration.md" >}})<br/>  |

## Enumeration Literals
| Name          | **Description** |
|---------------|-----------------|
| UUID | <html>   <head>     </head>   <body> Defines that this AliasIdentification represents a &quot;Universally Unique Identifier&quot;. Although a UUID&#160;is technical definition of a 128-Bit number, the primary relevance of this type is not it's technical representation, but it's other properties. A&#160;AliasIdentification with the type &quot;UUID&quot; of an element is it's unique identifier, that is constant over time, never changes and is never reused for other elements. Such an AliasIdentification can be used to trace elements through different systems, companies and processes.</body> </html> |
